# toolbox

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.claude/: settings.local.json
scripts/: gen_icons.py
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/core/: clipboard.rs  db.rs  mod.rs  settings.rs
src-tauri/src/core/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs
src-tauri/src/tools/: ai.rs  clipboard.rs  mod.rs
src/components/: ContextMenu.vue  Toast.vue
src/composables/: useClipboard.ts
src/layout/: Sidebar.vue  ToolContainer.vue
src/stores/: clipboard.ts  display.ts  sparkbox.ts  theme.ts  toast.ts  toolbox.ts
src/tools/: ClipboardManager.vue  Settings.vue  index.ts
src/types/: index.ts
