[package]
name = "toolbox"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "toolbox"
path = "src/main.rs"

[lib]
name = "toolbox_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
arboard = "3"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
log = "0.4"
env_logger = "0.11"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
